--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <body>
     <div class="min-h-screen w-full bg-gray-100">
         <!-- top navigation -->
-        <div class="fixed z-50 flex w-full items-center justify-between space-x-4 bg-white/10 p-4  backdrop-blur-2xl">
+        <div class="fixed z-50 flex w-full items-center justify-between space-x-4 bg-white/10 p-4 backdrop-blur-2xl">
             <div class="w-full justify-start text-2xl text-gray-800">Lite</div>
             <div class="flex w-full justify-end">
                 <ul class="flex space-x-4">
@@ -90,14 +90,17 @@
                             stroke="white" stroke-opacity="0.32" stroke-width="6.81865" />
                     </svg>
                 </div>
-                <div class="absolute inset-0 h-full w-full bg-gradient-to-b from-[#E8FCFF] from-10% via-[#E8FCFF] via-30% to-[#08A0B9]/0"></div>
+                <div
+                    class="absolute inset-0 h-full w-full bg-gradient-to-b from-[#E8FCFF] from-10% via-[#E8FCFF] via-30% to-[#08A0B9]/0">
+                </div>
             </div>
 
-            <div class="absolute mx-auto max-w-5xl w-full h-full text-center text-white pt-32 sm:pt-56">
+            <div class="absolute mx-auto max-w-5xl w-full h-full text-center text-white pt-24 sm:pt-40">
                 <h1
                     class="header text-4xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
                     My Top 10 Books for 2023</h1>
-                <p class="sub-header mt-4 md:mt-6 text-lg sm:text-2xl leading-1 text-gray-800">Call our branding and marketing assets
+                <p class="sub-header mt-4 md:mt-6 text-lg sm:text-2xl leading-1 text-gray-800">Call our branding and
+                    marketing assets
                     in one place to help you promote MailerSend with the same designs and messaging that we use.</p>
                 <div class="flex flex-row items-center justify-center space-x-4 mt-4 md:mt-6">
                     <a href="" target="_blank" rel="noopener noreferrer"
@@ -107,6 +110,48 @@
             </div>
         </div>
         <!-- end hero section -->
+
+
+
+        <div class="h-screen w-full relative flex justify-center items-center ">
+            <div class="relative w-full h-full text-center bg-cover bg-[#E8FCFF] bg-center overflow-hidden">
+
+                <!-- SVG Overlay -->
+                <div class="absolute inset-0 flex items-center justify-center top-[80%] blur-[200px]">
+                    <svg width="1440" height="960" viewBox="0 0 1440 960" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="364.82" cy="364.82" r="364.82" fill="#DDF8FB" />
+                        <circle cx="781.028" cy="578.069" r="381.198" fill="#48A1B0" />
+                        <circle cx="1152.3" cy="287.695" r="287.695" fill="#4D48D8" />
+                    </svg>
+                </div>
+                <div class="absolute inset-0 h-full w-full backdrop-blur-3xl">
+                </div>
+            </div>
+
+            <div class="absolute mx-auto max-w-6xl w-full h-full p-4 sm:p-8 flex flex-col sm:flex-row justify-center sm:justify-between sm:items-center space-y-12 sm:space-x-12">
+                <div class="w-full text-left">
+                    <h1
+                        class="header text-4xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
+                        My Top 10 Books for 2023</h1>
+                    <p class="sub-header mt-4 md:mt-6 text-lg sm:text-2xl leading-1 text-gray-800">Call our branding and
+                        marketing assets
+                        in one place to help you promote MailerSend with the same designs and messaging that we use.</p>
+                    <div class="flex flex-row items-center justify-start space-x-4 mt-4 md:mt-6">
+                        <a href="" target="_blank" rel="noopener noreferrer"
+                            class="bg-violet-500 border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-4 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition-color ease-in-out duration-300 hover:delay-75 hover:cursor-pointer disabled:opacity-75 disabled:bg-gray-500/50 disabled:cursor-not-allowed">Get
+                            Purchase</a>
+                    </div>
+                </div>
+
+                <div class="w-full h-80 bg-white rounded-lg">
+
+
+                </div>
+            </div>
+
+
+        </div>
     </div>
 
 </body>
