--- a/index.html
+++ b/index.html
@@ -123,15 +123,13 @@
                 <div class="flex flex-col justify-center space-y-4">
                     <h1
                         class="header text-4xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
-                        My Top 10 Books for 2023</h1>
-                    <p class=" text-lg sm:text-2xl leading-1 text-gray-800">Call our branding and
-                        marketing assets
-                        in one place to help you promote MailerSend with the same designs and messaging that we use.</p>
+                        Top 10 Books of the Year</h1>
+                    <p class=" text-lg sm:text-2xl leading-1 text-gray-800">Embark on an incredible literary journey with our handpicked selection.</p>
                 </div>
                 <div class="flex flex-row items-center justify-center space-x-4 ">
                     <a href="" target="_blank" rel="noopener noreferrer"
-                        class="bg-violet-500 border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-4 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer">Get
-                        Purchase</a>
+                        class="bg-violet-500 border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-4 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer">
+                        Get All Books for <span class="text-ocean-200"> $350.00</span></a>
                 </div>
             </div>
         </div>
@@ -139,10 +137,11 @@
 
 
 
-
         <!-- Second section -->
-        <div class="h-screen w-full relative overflow-none flex flex-col sm:flex-row items-center justify-center ">
-            <div class="relative w-full min-h-screen text-center bg-cover bg-[#E8FCFF] bg-center overflow-hidden">
+        <div
+            class="min-h-screen sm:h-screen w-full relative isolate overflow-none flex flex-col sm:flex-row items-center justify-center">
+            <div
+                class="relative w-full min-h-screen sm:h-screen text-center bg-cover bg-[#E8FCFF] bg-center overflow-hidden">
                 <!-- SVG Overlay -->
                 <div class="absolute inset-0 flex items-center justify-center top-[80%] blur-[200px]">
                     <svg width="1440" height="960" viewBox="0 0 1440 960" fill="none"
@@ -152,7 +151,7 @@
                         <circle cx="1152.3" cy="287.695" r="287.695" fill="#4D48D8" />
                     </svg>
                 </div>
-                <div class="absolute inset-0 min-h-screen w-full backdrop-blur-3xl">
+                <div class="absolute inset-0 min-h-screen sm:h-screen w-full backdrop-blur-3xl">
                 </div>
                 <!-- SVG Overlay -->
                 <div class="absolute inset-0 flex items-center justify-end opacity-50">
@@ -164,7 +163,7 @@
                 </div>
             </div>
 
-            <div class="absolute w-full h-screen">
+            <div class="absolute w-full min-h-screen sm:h-screen pt-48 pb-48">
                 <div
                     class="mx-auto max-w-6xl h-full px-4 sm:px-8 flex flex-col sm:flex-row justify-center sm:justify-between sm:items-center space-y-12 sm:space-y-0 space-x-0 sm:space-x-24">
                     <div class="w-full flex flex-col align-center text-center sm:text-left space-y-6">
@@ -174,21 +173,18 @@
                             <h1
                                 class="header text-4xl sm:text-6xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
                                 4 Top Design Books for 2023</h1>
-                            <p class="text-lg sm:text-xl leading-1 text-gray-800">Call our branding and
-                                marketing assets
-                                in one place to help you promote MailerSend with the same designs and messaging that we
-                                use.
+                            <p class="text-lg sm:text-xl leading-1 text-gray-800">Unlock Creativity, Master Design, and Elevate Your Skills with Our Handpicked Selection
                             </p>
                         </div>
                         <div class="flex flex-row items-center justify-center sm:justify-start space-x-4 ">
-                            <a href="" target="_blank" rel="noopener noreferrer"
-                                class="bg-violet-500 border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-4 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer disabled:opacity-75 disabled:bg-gray-500/50 disabled:cursor-not-allowed">Get
-                                Purchase</a>
+                           <a href="" target="_blank" rel="noopener noreferrer"
+                        class="bg-violet-500 border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-4 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer">
+                        Get All 4 Books for <span class="text-ocean-200"> $150.00</span></a>
                         </div>
                     </div>
 
                     <div class="flex justify-center items-center w-full">
-                        <div class="grid grid-cols-2 gap-8  sm:gap-8">
+                        <div class="grid grid-cols-2 gap-8 sm:gap-8 w-min-0 h-full">
                             <div
                                 class="w-auto sm:w-40 h-40 sm:h-60 -skew-x-6 hover:skew-x-0 transition ease-in-out duration-300 hover:delay-75 ">
                                 <img class="h-full w-full object-cover rounded-lg shadow-xl"
@@ -227,7 +223,7 @@
                 <div class="flex flex-col space-y-4 w-full text-center">
                     <h1
                         class="header text-4xl sm:text-6xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
-                        My Top 10 Books for 2023</h1>
+                        Top 10 Books of the Year</h1>
                     <p class="text-lg sm:text-xl leading-1 text-gray-800">Call our branding and
                         marketing assets
                         in one place to help you promote MailerSend with the same designs and messaging that we
@@ -571,15 +567,16 @@
 
                         <div class="w-full flex flex-col justify-center space-y-4 sm:space-y-8">
                             <div class="flex w-full justify-between items-center">
-                                <p class="bg-ocean-500 text-md sm:text-xl font-bold text-white px-2 sm:px-4 py-1 sm:py-3 rounded-lg -skew-x-12 ">
+                                <p
+                                    class="bg-ocean-500 text-md sm:text-xl font-bold text-white px-2 sm:px-4 py-1 sm:py-3 rounded-lg -skew-x-12 ">
                                     #01
                                 </p>
 
                                 <div class="flex items-center space-x-4 sm:space-x-8">
                                     <div
                                         class="p-2 cursor-pointer hover:bg-ocean-50 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer rounded-lg ">
-                                        <svg class="w-8 sm:w-12 h-8 sm:h-12" xmlns="http://www.w3.org/2000/svg" width="auto" height="auto"
-                                            viewBox="0 0 40 41" fill="none">
+                                        <svg class="w-8 sm:w-12 h-8 sm:h-12" xmlns="http://www.w3.org/2000/svg"
+                                            width="auto" height="auto" viewBox="0 0 40 41" fill="none">
                                             <mask id="mask0_25_2184" style="mask-type:alpha" maskUnits="userSpaceOnUse"
                                                 x="0" y="0" width="40" height="41">
                                                 <rect y="0.425781" width="40" height="40" fill="#D9D9D9" />
@@ -595,8 +592,8 @@
 
                                     <div
                                         class="p-2 cursor-pointer hover:bg-ocean-50 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer rounded-lg ">
-                                        <svg class="w-8 sm:w-12 h-8 sm:h-12" xmlns="http://www.w3.org/2000/svg" width="auto" height="auto"
-                                            viewBox="0 0 40 41" fill="none">
+                                        <svg class="w-8 sm:w-12 h-8 sm:h-12" xmlns="http://www.w3.org/2000/svg"
+                                            width="auto" height="auto" viewBox="0 0 40 41" fill="none">
                                             <mask id="mask0_25_2187" style="mask-type:alpha" maskUnits="userSpaceOnUse"
                                                 x="0" y="0" width="40" height="41">
                                                 <rect y="0.425781" width="40" height="40" fill="#D9D9D9" />
@@ -620,7 +617,8 @@
                                     #01?
                                 </h3>
                                 <p class="font-normal text-gray-800 text-md sm:text-base">Summary Description. All our
-                                    branding and marketing assets designs and messaging that we use. Summary Description.
+                                    branding and marketing assets designs and messaging that we use. Summary
+                                    Description.
                                     All our branding and</p>
                                 <div class="flex w-full flex-wrap space-x-2">
                                     <div class="text-lg sm:text-2xl text-yellow-500">&#9733;</div>
@@ -632,8 +630,7 @@
                             </div>
                             <h3 class="font-bold text-ocean-500 text-lg sm:text-xl">$ 39.99</h3>
 
-                            <div
-                                class="w-full flex flex-row items-center justify-center space-x-4">
+                            <div class="w-full flex flex-row items-center justify-center space-x-4">
                                 <a href="" target="_blank" rel="noopener noreferrer"
                                     class="bg-violet-500 w-full border-0 border-transparent text-white hover:bg-violet-600 focus:ring-violet-300 px-6 py-3 text-base sm:text-lg font-bold rounded-lg justify-center items-center text-center shadow-sm focus:outline-none focus:ring-2 focus:ring-offset-2 transition ease-in-out duration-300 hover:delay-75 hover:cursor-pointer">Get
                                     Purchase</a>
