--- a/index.html
+++ b/index.html
@@ -706,10 +706,10 @@
                     </div>
                 </div>
 
-                <!-- <div class="w-full h-full flex sm:justify-end"> -->
+                <div class="w-full h-full flex sm:justify-end">
                     <img class="h-full w-full object-fit" src="./assets/svgs/guy-sitting-reading.svg"
                         alt="guy-sitting-reading" srcset="">
-                <!-- </div> -->
+                </div>
             </div>
         </div>
         <!-- end fifth section -->
