--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                                 <h3 class="font-bold text-gray-900 text-base sm:text-lg group-hover:underline transition ease-in-out duration-300 hover:delay-75">The Light Beyond the Garden
                                     Wall
                                 </h3>
-                                <p class="font-normal text-gray-800 text-sm sm:text-md">Scot Whitehead</p>
+                                <p class="font-normal text-gray-800 text-sm sm:text-md">By Scot Whitehead</p>
                             </div>
                         </div>
 
