--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="absolute mx-auto max-w-5xl w-full h-full text-center text-white pt-40 px-8 sm:pt-40 space-y-6">
                 <div class="flex flex-col justify-center space-y-4">
                     <h1
-                        class="header text-4xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
+                        class="text-6xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
                         Top 10 Books of the Year</h1>
                     <p class=" text-lg sm:text-2xl leading-1 text-gray-800">Embark on an incredible literary journey
                         with our handpicked selection.</p>
@@ -730,7 +730,7 @@
                 <div class="w-full flex flex-col items-center sm:items-start text-center sm:text-left space-y-6">
                     <div class="flex flex-col justify-center space-y-4">
                         <h1
-                            class="header text-4xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
+                            class="text-6xl sm:text-7xl font-extrabold tracking-tight md:tracking-tight leading-tight md:leading-tight text-gray-900">
                             Top Books of the Year</h1>
                         <p class=" text-lg sm:text-2xl leading-1 text-gray-800">Embark on an incredible literary journey
                             with our handpicked selection.</p>
